--- a/.github/workflows/RAMS_JMeter.yml
+++ b/.github/workflows/RAMS_JMeter.yml
@@ -54,8 +54,8 @@ jobs:
         name: jmeter-results
         path: |
          ${{ github.workspace }}/apache-jmeter-5.5/bin/jmeter.log
-         ${{ github.workspace }}/apache-jmeter-5.5/bin/Aggregate.jtl
-         # ${{ github.workspace }}/apache-jmeter-5.5/bin/Aggregate.csv
+         # ${{ github.workspace }}/apache-jmeter-5.5/bin/Aggregate.jtl
+         ${{ github.workspace }}/apache-jmeter-5.5/bin/Aggregate.csv
          cd ${{ github.workspace }}/apache-jmeter-5.5/bin
          ls
 
