--- a/.github/workflows/RAMS_JMeter.yml
+++ b/.github/workflows/RAMS_JMeter.yml
@@ -45,7 +45,7 @@ jobs:
         npm i yargs
         cd ${{ github.workspace }}/apache-jmeter-5.5/bin
         java -XX:+PrintFlagsFinal -version | grep MaxHeapSize
-        JVM_ARGS="-Xms256m -Xmx512m" ./jmeter -n -t ${{ github.workspace }}/RAMS.jmx
+        java -Xms1g -Xmx2g -jar ./ApacheJMeter.jar -n -t ${{ github.workspace }}/RAMS.jmx
         java -XX:+PrintFlagsFinal -version | grep MaxHeapSize
       
     - name: Upload Results
