--- a/.github/workflows/RAMS_JMeter.yml
+++ b/.github/workflows/RAMS_JMeter.yml
@@ -44,6 +44,8 @@ jobs:
         npm i moment-timezone
         npm i yargs
         cd ${{ github.workspace }}/apache-jmeter-5.5/bin
+        cd /etc/java-11-openjdk
+        cat jvm.options
         java -XX:+PrintFlagsFinal -version | grep MaxHeapSize
         java -Xms1g -Xmx2g -jar ./ApacheJMeter.jar -n -t ${{ github.workspace }}/RAMS.jmx
         java -XX:+PrintFlagsFinal -version | grep MaxHeapSize
