--- a/.github/workflows/RAMS_JMeter.yml
+++ b/.github/workflows/RAMS_JMeter.yml
@@ -46,7 +46,7 @@ jobs:
         java -version
         sudo su
         cd ${{ github.workspace }}/apache-jmeter-5.5/bin
-        JVM_ARGS="-Xms1g -Xmx2g" ${{ github.workspace }}/apache-jmeter-5.5/bin/jmeter.sh
+        sed -i '200i JVM_ARGS="-Xms1g -Xmx2g"' ${{ github.workspace }}/apache-jmeter-5.5/bin/jmeter.sh
         java -XX:+PrintFlagsFinal -version | grep MaxHeapSize
         java -Xms1g -Xmx2g -jar ./ApacheJMeter.jar -n -t ${{ github.workspace }}/RAMS.jmx
         java -XX:+PrintFlagsFinal -version | grep MaxHeapSize
@@ -56,7 +56,7 @@ jobs:
       with:
         name: jmeter-results
         path: |
-         ${{ github.workspace }}/apache-jmeter-5.5/bin/jmeter.log
+         ${{ github.workspace }}/apache-jmeter-5.5/bin/jmeter.sh
          # ${{ github.workspace }}/apache-jmeter-5.5/bin/Aggregate.jtl
          ${{ github.workspace }}/apache-jmeter-5.5/bin/Aggregate.csv
          cd ${{ github.workspace }}/apache-jmeter-5.5/bin
