--- a/.github/workflows/RAMS_JMeter.yml
+++ b/.github/workflows/RAMS_JMeter.yml
@@ -44,10 +44,9 @@ jobs:
         npm i moment-timezone
         npm i yargs
         java -version
-        java -Xmx2g ...
         cd ${{ github.workspace }}/apache-jmeter-5.5/bin
         java -XX:+PrintFlagsFinal -version | grep MaxHeapSize
-        java -Xms1g -Xmx3g -jar ./ApacheJMeter.jar -n -t ${{ github.workspace }}/RAMS.jmx
+        java -Xms1m -Xmx6m -jar ./ApacheJMeter.jar -n -t ${{ github.workspace }}/RAMS.jmx
         java -XX:+PrintFlagsFinal -version | grep MaxHeapSize
       
     - name: Upload Results
