--- a/.github/workflows/RAMS_JMeter.yml
+++ b/.github/workflows/RAMS_JMeter.yml
@@ -45,7 +45,7 @@ jobs:
         npm i yargs
         java -version
         # docker cp ${{ github.workspace }}/RAMS.jmx /bin/RAMS.jmx
-        cd /opt/apache-jmeter-5.5/docker-jmeter/tests/trivial
+        cd /opt/apache-jmeter-5.5
         ls
         docker run jmeter -n -t docker-jmeter/tests/trivial/test-plan.jmx
         # cd ${{ github.workspace }}/apache-jmeter-5.5/bin
