--- a/.github/workflows/RAMS_JMeter.yml
+++ b/.github/workflows/RAMS_JMeter.yml
@@ -25,8 +25,8 @@ jobs:
     
     - name: dowload jmeter unzip
       run: |
-        docker pull justb4/jmeter
-        docker tag justb4/jmeter jmeter
+        docker pull https://github.com/perfqapm/docker-jmeter.git
+        docker tag docker-jmeter jmeter
         docker images
         #cd apache-jmeter-5.5/bin
         #ls
@@ -46,7 +46,7 @@ jobs:
         java -version
         # docker cp ${{ github.workspace }}/RAMS.jmx /bin/RAMS.jmx
         ls
-        docker run jmeter -n -t ./tests/trivial/test-plan.jmx
+        docker run jmeter -n -t ./test-plan.jmx
         # cd ${{ github.workspace }}/apache-jmeter-5.5/bin
         # java -XX:+PrintFlagsFinal -version | grep MaxHeapSize
         # java -Xms1m -Xmx6m -jar ./ApacheJMeter.jar -n -t ${{ github.workspace }}/RAMS.jmx && java -Xms20m -Xmx60m -jar ./ApacheJMeter.jar -n -t ${{ github.workspace }}/RAMS.jmx
